angular-bugs: Eliminated flickering elements.

--- a/src/Chirp/wwwroot/css/site.css
+++ b/src/Chirp/wwwroot/css/site.css
@@ -76,3 +76,12 @@ input[type=text], input[type=password], textarea {
 .even {
 	background-color: #daebf8;
 }
+
+/* 
+  Allow angular.js to be loaded in body, hiding cloaked elements until 
+  templates compile.  The !important is important given that there may be 
+  other selectors that are more specific or come later and might alter display.  
+ */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
